# shrs_template

./: Cargo.toml  README.md
examples/: basic.rs
src/: lib.rs
